examples/false_positive_masking_bug/klee-out-2/test000001.ptr.err
Error: memory error: out of bound pointer
File: ./false_positive_masking_bug/false_positive_masking_bug.c
Line: 16
assembly.ll line: 42
State: 2
Stack: 
	#000000042 in main () at ./false_positive_masking_bug/false_positive_masking_bug.c:16
Info: 
	address: 93835390499576
	next: object at 93835390279936 of size 4
		MO13[4] allocated at main():  %y = alloca i32, align 4
