examples/false_positive_masking_bug/klee-out-2/test000001.kquery
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Slt (ReadLSB w32 0 y)
                  10))]
        false)
